--- a/frmTrackThread/Properties/Resources.resx
+++ b/frmTrackThread/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="1234" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1234.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\12.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
